--- a/render.yaml
+++ b/render.yaml
@@ -20,12 +20,8 @@ services:
         fromService:
           type: web
           name: rag-frontend
-          property: url
-        # We need to wrap the URL in a JSON list format. 
-        # Render doesn't easily allow string formatting in 'fromService' directly for complex types.
-        # simpler approach: Allow all origins or rely on manual update.
-        # Strategy: We will update backend config to allow comma-separated string for easier config.
-        # For now, let's leave this placeholder and I will modify config.py to tolerate standard strings.
+          property: host
+        # Note: 'host' returns domain.com. Backend config will prepend https://
         
   # --------------------------------------------------------------------------------
   # FRONTEND (Static Site)
@@ -43,4 +39,4 @@ services:
         fromService:
           type: web
           name: rag-backend
-          property: url
+          property: host
