--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,8 @@ openai==1.35.3
 # ── Embeddings: HuggingFace Sentence Transformers ────────────────────────────
 sentence-transformers==3.0.1
 transformers==4.42.4
-torch==2.3.1                     # CPU-only; use torch+cu121 for GPU
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.3.1
 
 # ── Vector Store: FAISS ──────────────────────────────────────────────────────
 faiss-cpu==1.8.0
